--- a/rmb/pom.xml
+++ b/rmb/pom.xml
@@ -2,15 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>us.yamb</groupId>
-    <artifactId>amb-parent</artifactId>
+    <artifactId>yamb-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>amb-api</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>us.yamb</groupId>
-  		<artifactId>common</artifactId>
-  		<version>1.0-SNAPSHOT</version>
-  	</dependency>
-  </dependencies>
+  <artifactId>rmb</artifactId>
+  <packaging>pom</packaging>
+  <modules>
+  	<module>rmb-api</module>
+  	<module>rmb-common</module>
+  </modules>
 </project>
