--- a/rmb/rmb-api/pom.xml
+++ b/rmb/rmb-api/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>us.yamb</groupId>
-    <artifactId>amb-parent</artifactId>
+    <artifactId>rmb</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>amb-api</artifactId>
+  <artifactId>rmb-api</artifactId>
   <dependencies>
   	<dependency>
   		<groupId>us.yamb</groupId>
