--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,4 +6,11 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>common</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>net.sf.flexjson</groupId>
+  		<artifactId>flexjson</artifactId>
+  		<version>3.3</version>
+  	</dependency>
+  </dependencies>
 </project>
