--- a/rmb/rmb-amb/pom.xml
+++ b/rmb/rmb-amb/pom.xml
@@ -5,18 +5,22 @@
     <artifactId>rmb</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>rmb-api</artifactId>
+  <artifactId>rmb-amb</artifactId>
   <dependencies>
   	<dependency>
   		<groupId>us.yamb</groupId>
-  		<artifactId>common</artifactId>
+  		<artifactId>amb-api</artifactId>
   		<version>1.0-SNAPSHOT</version>
   	</dependency>
   	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.11</version>
-  		<scope>test</scope>
+  		<groupId>us.yamb</groupId>
+  		<artifactId>rmb-api</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>us.yamb</groupId>
+  		<artifactId>rmb-common</artifactId>
+  		<version>1.0-SNAPSHOT</version>
   	</dependency>
   </dependencies>
 </project>
