--- a/rmb/rmb-common/pom.xml
+++ b/rmb/rmb-common/pom.xml
@@ -6,4 +6,22 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>rmb-common</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>us.yamb</groupId>
+  		<artifactId>amb-common</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>us.yamb</groupId>
+  		<artifactId>rmb-api</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  		<scope>test</scope>
+  	</dependency>
+  </dependencies>
 </project>
