--- a/rmb/rmb-amb/pom.xml
+++ b/rmb/rmb-amb/pom.xml
@@ -22,5 +22,22 @@
   		<artifactId>rmb-common</artifactId>
   		<version>1.0-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.ericsson.research.trap</groupId>
+  		<artifactId>trap-utils-15</artifactId>
+  		<version>1.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>us.yamb</groupId>
+  		<artifactId>amb-tmb</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
