Bugfixes in RMB Implementation

--- a/amb/amb-rabbit/pom.xml
+++ b/amb/amb-rabbit/pom.xml
@@ -30,4 +30,27 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>yamb-snapshots</id>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<url>https://nexus.d2dx.com/content/repositories/yamb-snapshots</url>
+		</repository>
+		<repository>
+			<id>yamb-releases</id>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<url>https://nexus.d2dx.com/content/repositories/yamb-releases</url>
+		</repository>
+	</repositories>
 </project>
