--- a/tmb/pom.xml
+++ b/tmb/pom.xml
@@ -1,24 +1,48 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>us.yamb</groupId>
-    <artifactId>yamb-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>tmb</artifactId>
-  <name>Tiny Message Bus</name>
-  <description>Tiny Message Bus is a minimal message bus implementation for Java, using no scalability, primarily for educational and testing purposes.</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.ericsson.research.trap</groupId>
-  		<artifactId>trap-network-websockets-nio</artifactId>
-  		<version>1.3</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.11</version>
-  		<scope>test</scope>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>us.yamb</groupId>
+		<artifactId>yamb-parent</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>tmb</artifactId>
+	<name>Tiny Message Bus</name>
+	<description>Tiny Message Bus is a minimal message bus implementation for Java, using no scalability, primarily for educational and testing purposes.</description>
+	<dependencies>
+		<dependency>
+			<groupId>com.ericsson.research.trap</groupId>
+			<artifactId>trap-network-websockets-nio</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>yamb-snapshots</id>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<url>https://nexus.d2dx.com/content/repositories/yamb-snapshots</url>
+		</repository>
+		<repository>
+			<id>yamb-releases</id>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<url>https://nexus.d2dx.com/content/repositories/yamb-releases</url>
+		</repository>
+	</repositories>
 </project>
