--- a/rmb/rmb-amb/pom.xml
+++ b/rmb/rmb-amb/pom.xml
@@ -40,6 +40,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>us.yamb</groupId>
+			<artifactId>tmb-trap</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
