--- a/rmb/pom.xml
+++ b/rmb/pom.xml
@@ -12,6 +12,7 @@
 		<module>rmb-api</module>
 		<module>rmb-common</module>
 		<module>rmb-amb</module>
+		<module>rmb-tmb-trap</module>
 	</modules>
 
 	<repositories>
