Changed dependency versions & doc fixes

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
 				<version>${trap.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.ericsson.research.trap</groupId>
+				<artifactId>trap-network-websockets-nio</artifactId>
+				<version>${trap.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
