Removed redundant references to JS files.
The new preferred way to access the files within Java is to use the
ClassLoader-based loaders instead.

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
 				<artifactId>flexjson</artifactId>
 				<version>3.3</version>
 			</dependency>
+			<dependency>
+				<groupId>com.ericsson.research.trap</groupId>
+				<artifactId>trap-js</artifactId>
+				<version>1.4.1-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
