--- a/yamb-core/pom.xml
+++ b/yamb-core/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.ericsson.research.trap</groupId>
 			<artifactId>trap-transport-loopback</artifactId>
-			<version>1.3</version>
+			<version>1.4.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
